--- a/config.json
+++ b/config.json
@@ -9,6 +9,70 @@
     "raw_table_cap": 50,
     "max_upload_mb": 8
   },
+  "Home": {
+    "body":{
+      "first": {
+        "type": "announcement",
+        "title": "Welcome to the 2025 Season",
+        "description": "This year's game is Reefscape! Make sure to check out the new scoring rules."
+      },
+      "second": {
+        "type": "announcement",
+        "title": "Scouting Schedule",
+        "description": "We'll be scouting all teams participating in Socal Showdown at Da Vinci"
+      },
+      "third": {
+        "type": "checklist",
+        "title": "Match Scouting for Socal Showdown (Still not fully working)",
+        "options": [
+          22,
+          294,
+          359,
+          597,
+          599,
+          687,
+          691,
+          696,
+          702,
+          968,
+          980,
+          1138,
+          1148,
+          1160,
+          1197,
+          1836,
+          2637,
+          2659,
+          2710,
+          3255,
+          3408,
+          3473,
+          3476,
+          3759,
+          4079,
+          4123,
+          4201,
+          4276,
+          4322,
+          4419,
+          4470,
+          4501,
+          4999,
+          5199,
+          5285,
+          5669,
+          5805,
+          6072,
+          6220,
+          6658,
+          6904,
+          7042,
+          8521,
+          9408
+        ]
+      }
+    }
+  },
   "match_form": {
     "pre-match_info": {
       "scouter_initials": {
