making some scouting things nicer

--- a/config.json
+++ b/config.json
@@ -25,50 +25,50 @@
         "type": "checklist",
         "title": "Match Scouting for Socal Showdown (Still not fully working)",
         "options": [
-          22,
-          294,
-          359,
-          597,
-          599,
-          687,
-          691,
-          696,
-          702,
-          968,
-          980,
-          1138,
-          1148,
-          1160,
-          1197,
-          1836,
-          2637,
-          2659,
-          2710,
-          3255,
-          3408,
-          3473,
-          3476,
-          3759,
-          4079,
-          4123,
-          4201,
-          4276,
-          4322,
-          4419,
-          4470,
-          4501,
-          4999,
-          5199,
-          5285,
-          5669,
-          5805,
-          6072,
-          6220,
-          6658,
-          6904,
-          7042,
-          8521,
-          9408
+          "22|Double Deuce",
+          "294|Beach Cities Robotics",
+          "359|The Hawaiian Kids",
+          "597|The Wolverines",
+          "599|The Robodox",
+          "687|The Nerd Herd",
+          "691|Project 691",
+          "696|Circuit Breakers",
+          "702|Bagel Bytes",
+          "968|RAWC (Robotics Alliance of West Covina)",
+          "980|ThunderBots",
+          "1138|Eagle Engineering",
+          "1148|Harvard-Westlake Robotics",
+          "1160|Titanium Robotics",
+          "1197|Torbots",
+          "1836|The MilkenKnights",
+          "2637|The Phantom Catz",
+          "2659|Robowarriors",
+          "2710|JetStream Robotics",
+          "3255|The SuperNURDs",
+          "3408|cyberCubs",
+          "3473|Team Sprocket",
+          "3476|Code Orange",
+          "3759|SMArtbots",
+          "4079|Quantum Leap",
+          "4123|Tribe Robotics",
+          "4201|The Vitruvian Bots",
+          "4276|Surf City Vikings",
+          "4322|Clockwork",
+          "4419|Team Rewind",
+          "4470|Tigears",
+          "4501|HUMANS",
+          "4999|Momentum",
+          "5199|Robot Dolphins From Outer Space",
+          "5285|Sea Kings Robotics",
+          "5669|Techmen",
+          "5805|SMbly Required",
+          "6072|Triton Tech 6072",
+          "6220|Golden Griffins",
+          "6658|Rockbotics",
+          "6904|TeraWatts",
+          "7042|Poly Rabbotics",
+          "8521|CyberLions",
+          "9408|Warren Warbots"
         ]
       }
     }
@@ -102,9 +102,9 @@
           "Blue1",
           "Blue2",
           "Blue3",
-          "Red1",
+          "Red3",
           "Red2",
-          "Red3"
+          "Red1"
         ],
         "image": "/photos/reefscape.JPEG"
       }
