--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
         "type": "checklist",
         "title": "Match Scouting for Socal Showdown (Still not fully working)",
         "options": [
-          "22|Double Deuce",
+          "22|Double Deuce - Conrad Oldoerp",
           "294|Beach Cities Robotics",
           "359|The Hawaiian Kids",
           "597|The Wolverines",
