--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
         "type": "checklist",
         "title": "Match Scouting for Socal Showdown (Still not fully working)",
         "options": [
-          "22|Double Deuce",
+          "22|Double Deuce - Conrad Oldoerp",
           "294|Beach Cities Robotics",
           "359|The Hawaiian Kids",
           "597|The Wolverines",
@@ -50,7 +50,7 @@
           "3476|Code Orange",
           "3759|SMArtbots",
           "4079|Quantum Leap",
-          "4123|Tribe Robotics",
+          "4123|Tribe Robotics - Conrad Oldoerp",
           "4201|The Vitruvian Bots",
           "4276|Surf City Vikings",
           "4322|Clockwork",
@@ -58,9 +58,9 @@
           "4470|Tigears",
           "4501|HUMANS",
           "4999|Momentum",
-          "5199|Robot Dolphins From Outer Space",
+          "5199|Robot Dolphins From Outer Space - Conrad Oldoerp",
           "5285|Sea Kings Robotics",
-          "5669|Techmen",
+          "5669|Techmen - Victory Santa Maria",
           "5805|SMbly Required",
           "6072|Triton Tech 6072",
           "6220|Golden Griffins",
