--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
       },
       "third": {
         "type": "checklist",
-        "title": "Match Scouting for Socal Showdown (Still not fully working)",
+        "title": "Match Scouting for Socal Showdown",
         "options": [
           "22|Double Deuce - Conrad Oldoerp",
           "294|Beach Cities Robotics",
