--- a/config.json
+++ b/config.json
@@ -51,12 +51,12 @@
           "3759|SMArtbots - Terry Owens",
           "4079|Quantum Leap - Yule Lee",
           "4123|Tribe Robotics - Conrad Oldoerp",
-          "4201|The Vitruvian Bots - Yule Lee",
-          "4276|Surf City Vikings - Yule Lee",
-          "4322|Clockwork - Yule Lee",
-          "4419|Team Rewind - Yule Lee",
-          "4470|Tigears - Yule Lee",
-          "4501|HUMANS - Yule Lee",
+          "4201|The Vitruvian Bots - Yul Lee",
+          "4276|Surf City Vikings - Yul Lee",
+          "4322|Clockwork - Yul Lee",
+          "4419|Team Rewind - Yul Lee",
+          "4470|Tigears - Yul Lee",
+          "4501|HUMANS - Yul Lee",
           "4999|Momentum - Xavier Marques",
           "5199|Robot Dolphins From Outer Space - Conrad Oldoerp",
           "5285|Sea Kings Robotics - Xavier Marques",
