Adding search functionality to the data views, and filters to them as well Added filters to team_summary Added a file to add TBA implementation

--- a/config.json
+++ b/config.json
@@ -111,7 +111,8 @@
     },
     "auto_period": {
       "left_starting_zone": {
-        "type": "Boolean with Value"
+        "type": "Boolean with Value",
+        "value": 3
       },
       "L1": {
         "type": "Scoring Object",
