--- a/config.json
+++ b/config.json
@@ -49,7 +49,7 @@
           "3473 | Team Sprocket - Terry Owens",
           "3476 | Code Orange - Terry Owens",
           "3759 | SMArtbots - Terry Owens",
-          "4079 | Quantum Leap - Yule Lee",
+          "4079 | Quantum Leap - Yul Lee",
           "4123 | Tribe Robotics - Conrad Oldoerp",
           "4201 | The Vitruvian Bots - Yul Lee",
           "4276 | Surf City Vikings - Yul Lee",
