Adding event history to team summary page and fixing some bugs in dynamic form and team summary page styling. Creating some other pages for future use potentially

--- a/config.json
+++ b/config.json
@@ -74,7 +74,7 @@
     }
   },
   "match_form": {
-    "pre-match_info": {
+    "pre_match": {
       "scouter_initials": {
         "type": "String"
       },
