--- a/config.json
+++ b/config.json
@@ -40,7 +40,6 @@
           "1148 | Harvard-Westlake Robotics - Isaiah Valles",
           "1160 | Titanium Robotics - Davin Somsanith",
           "1197 | Torbots - Davin Somsanith",
-          "1836 | The MilkenKnights - Davin Somsanith",
           "2637 | The Phantom Catz - Davin Somsanith",
           "2659 | Robowarriors - Davin Somsanith",
           "2710 | JetStream Robotics - Davin Somsanith",
@@ -58,15 +57,16 @@
           "4470 | Tigears - Yul Lee",
           "4501 | HUMANS - Yul Lee",
           "4999 | Momentum - Terry Owens",
+	  "5089 | Robo-Nerds - Terry Owens",
           "5199 | Robot Dolphins From Outer Space - Conrad Oldoerp",
-          "5285 | Sea Kings Robotics - Conrad Oldoerp",
           "5669 | Techmen - Victor SantaMaria",
-          "5805 | SMbly Required - Terry Owens",
-          "6072 | Triton Tech 6072 - Colin Prieto",
-          "6220 | Golden Griffins - Davin Somsanith",
-          "6658 | Rockbotics - Victor SantaMaria",
-          "6904 | TeraWatts - Victor SantaMaria",
+          "5805 | SMbly Required - Xavier Marquez",
+          "6072 | Triton Tech 6072 - Xavier Marquez",
+          "6220 | Golden Griffins - Xavier Marquez",
+          "6658 | Rockbotics - Xavier Marquez",
+          "6904 | TeraWatts - Isaiah Valles",
           "7042 | Poly Rabbotics - Victor SantaMaria",
+	  "8060 | VHS Robotics - Yul Lee",
           "8521 | CyberLions - Victor SantaMaria",
           "9408 | Warren Warbots - Victor SantaMaria"
         ]
